scripts/nullaway/wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8.txt
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:52: error: [NullAway] assigning @Nullable expression to @NonNull field
        toNamenode = Simulator.getToNamenode();
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:53: error: [NullAway] assigning @Nullable expression to @NonNull field
        toDatanodes = Simulator.getToDatanodes();
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:207: error: [NullAway] dereferenced expression sourceNode is @Nullable
            boolean NodesAlive = (!sourceNode.hasFailed() && !destinationNode.hasFailed());
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:207: error: [NullAway] dereferenced expression destinationNode is @Nullable
            boolean NodesAlive = (!sourceNode.hasFailed() && !destinationNode.hasFailed());
                                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:208: error: [NullAway] dereferenced expression destinationNode is @Nullable
            if (Node.now() >= destinationNode.getDownloadingTime() && NodesAlive) {
                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:242: error: [NullAway] dereferenced expression sourceNode is @Nullable
                boolean NodesAlive = (!sourceNode.hasFailed() && !destinationNode.hasFailed());
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:242: error: [NullAway] dereferenced expression destinationNode is @Nullable
                boolean NodesAlive = (!sourceNode.hasFailed() && !destinationNode.hasFailed());
                                                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/AllDatanode.java:244: error: [NullAway] dereferenced expression destinationNode is @Nullable
                    boolean ableToTransfer = (Node.now() > sourceNode.getUploadingTime()) && (Node.now() > destinationNode.getDownloadingTime());
                                                                                                                          ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Simulator.java:237: error: [NullAway] unboxing of a @Nullable value
                    failTime = failureEvents.get(st.getIdBlock());
                                                ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:95: error: [NullAway] assigning @Nullable expression to @NonNull field
        toNamenode = Simulator.getToNamenode();
                   ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:96: error: [NullAway] assigning @Nullable expression to @NonNull field
        toDatanodes = Simulator.getToDatanodes();
                    ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:459: error: [NullAway] dereferenced expression chosen is @Nullable
            if (chosen.isGoodTarget(blockSize, containingNodes)) {
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:555: error: [NullAway] dereferenced expression datanode is @Nullable
        datanode.addBlock(blockinfo);
                ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:557: error: [NullAway] dereferenced expression blockinfo is @Nullable
        blockinfo.addDatanode(datanode);
                 ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:566: error: [NullAway] dereferenced expression datanode is @Nullable
        datanode.setLastHB(time);
                ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/Namenode.java:579: error: [NullAway] dereferenced expression datanode is @Nullable
        datanode.addBlock(block);
                ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/NodeKiller.java:13: error: [NullAway] enhanced-for expression failures is @Nullable
        for (Event e : failures) {
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url04f7fcf4e1_peteratt_HDFS_Replication_Simulator_tgz-pJ8-hdfs_replicationsimulator_MainJ8/src/hdfs/replicationsimulator/NodeKiller.java:21: error: [NullAway] dereferenced expression Simulator.getAllDatanodes() is @Nullable
            Simulator.getAllDatanodes().killNode(e.getSource());
                                       ^
    (see http://t.uber.com/nullaway )
18 errors
